--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ box-sizing: border-box;
 
 /* estilos de header */
 
+
 .contenedor-video{
 position: relative;
 }
@@ -36,7 +37,7 @@ color: white;
 }
 
 h5{
-color: #e9de6c;
+color: rgb(214, 134, 134);
 }
 
 .texto-uno{
